fixing paths in test

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,14 +4,14 @@ CXXFLAGS = -pthread -std=c++0x
 
 default: default_params_test default_params_result.txt
 
-args.o: ../fasttext/cpp/args.o
+args.o: ../../args.o
 .PHONY: args.o
 
-../fasttext/cpp/args.o:
-	$(MAKE) --directory ../fasttext/cpp/
+../../args.o:
+	$(MAKE) --directory ../../
 
-default_params_test: args.o default_params_test.cc
-	$(CXX) $(CXXFLAGS) ../fasttext/cpp/args.o \
+default_params_test: ../../args.o default_params_test.cc
+	$(CXX) $(CXXFLAGS) ../../args.o \
 		default_params_test.cc -o default_params_test
 
 default_params_result.txt: default_params_test
@@ -28,4 +28,3 @@ cbow_default_params_result.txt: default_params_test
 classifier_default_params_result.txt: default_params_test
 	./default_params_test supervised -input test -output test \
 		> classifier_default_params_result.txt
-
